--- a/codsoft/portfolio.html
+++ b/codsoft/portfolio.html
@@ -61,8 +61,8 @@
     <footer>
         <div class="ftext">Socials  :</div>
         <div class="links">
-            <a href="https://www.instagram.com/balraj_mahto/" class="li"><i class='bx bxl-instagram'></i></a>
-            <a href="https://www.linkedin.com/in/balraj-mahto-659b98258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="li"><i class='bx bxl-linkedin' ></i></i></a>
+            <a href="https://www.instagram.com/dhanush_baditi_09/" class="li"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.linkedin.com/in/dhanush-baditi-a1a70126b/" class="li"><i class='bx bxl-linkedin' ></i></i></a>
             <a href="https://github.com/baditiDhanush/CodSoft/tree/main/codsoft" class="li"><i class='bx bxl-github'></i></a>
         </div>
         <div class="fsubtext">NOTE: The image used above isn't mine.</div>
