--- a/codsoft/portfolio.html
+++ b/codsoft/portfolio.html
@@ -15,7 +15,7 @@
         <div class="name">BADITI DHANUSH</div>
         <div class="nav">
             <a href="portfolio.html">Home</a>
-            <a href="https://www.linkedin.com/in/balraj-mahto-659b98258/">Contact me</a>
+            <a href="https://www.linkedin.com/in/dhanush-baditi-a1a70126b/">Contact me</a>
             <a href="">Projects</a>
 
         </div>
@@ -54,7 +54,7 @@
         </section>
     </main>
     <div class="cv">
-    <a href="https://www.livecareer.co.uk/thumbnail/documentprod/8bacda7c-c0e1-4a6b-9361-e41fe724c47e/c5dcd5bb-0c61-4977-a5b2-5db9d94b229d/d96c8800-76b5-44b1-ae6e-4186d6a65dc6.svg" download="cv1.pdf">Download Resume</a>
+    <a href="" download="cv1.pdf">Download Resume</a>
     </div>
 
     <br><br><br>
